Removed extraneous endpoints from controller and added QueueGenerateCustomForecast endpoint

--- a/WeatherApp/appsettings.json
+++ b/WeatherApp/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=/C://Users/dparvin/Desktop/weatherdb.db"
-  }
+  },
+  "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+  "ForecastQueueName": "custom-forecast-requests"
 }
