--- a/Calculations/Calculations.csproj
+++ b/Calculations/Calculations.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Storage.Queues" Version="12.22.0" />
+  </ItemGroup>
+
 </Project>
