Added readme with startup configuration

--- a/WeatherApp/appsettings.json
+++ b/WeatherApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=/C://Users/dparvin/Desktop/weatherdb.db"
+    "DefaultConnection": "Data Source=/C://Users/[USERNAME]/Desktop/weatherdb.db"
   },
   "AzureWebJobsStorage": "UseDevelopmentStorage=true",
   "ForecastQueueName": "custom-forecast-requests"
