--- a/Functions/local.settings.json
+++ b/Functions/local.settings.json
@@ -6,6 +6,6 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=/C://Users/dparvin/Desktop/weatherdb.db"
+    "DefaultConnection": "Data Source=/C://Users/[USERNAME]/Desktop/weatherdb.db"
   }
 }
